// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon component > should call the click event when the icon is clicked 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should handle role=option as checkbox 1`] = `
<div>
  <rkt-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="option"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon as disabled 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center disabled"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with a custom class 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center custom-class"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with a custom class 2`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center custom-class-2"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with checkbox role 1`] = `
<div>
  <rkt-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with checkbox role with default state 1`] = `
<div>
  <rkt-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the provided name 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the provided name and label 1`] = `
<div>
  <rkt-icon
    aria-label="Dark mode"
    class="flex flex-shrink-0 items-center justify-center "
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the size when specified in class 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center small"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the size when specified in class 2`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center medium"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the size when specified in class 3`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center large"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the specified role 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center "
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the specified size 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center small"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the specified size 2`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center medium"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the specified size 3`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:mode-dark"
    class="flex flex-shrink-0 items-center justify-center large"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rkt-icon>
  
</div>
`;

exports[`Icon component > should render the icon with the specified state 1`] = `
<div>
  <rkt-icon
    aria-label="i-rokkit:node-opened"
    class="flex flex-shrink-0 items-center justify-center "
    data-state="opened"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:node-opened"
    />
  </rkt-icon>
  
</div>
`;
